# talent-plan

talent-mine/: Cargo.toml
talent-mine/project-1/: Cargo.toml
talent-mine/project-1/src/: kv.rs
talent-mine/project-2/: Cargo.toml
talent-mine/project-2/src/: kv.rs
talent-mine/project-2/tests/: tests.rs
